MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/6.mpl
fun n6 :: A -> B =
    a -> a
    a -> a
    a -> a
    a -> a
